[package]
name = "golomb-coded-set"
version = "0.1.0"
authors = ["Linfeng Qian <thewawar@gmail.com>"]
edition = "2018"
license = "MIT"

description = "An implementation of BIP158 Golomb-Coded Set data structure"
readme = "README.md"
repository = "https://github.com/TheWaWaR/golomb-coded-set"
keywords = ["golomb", "set", "bip158"]
categories = ["algorithms", "data-structures"]

[dependencies]
bitcoin_hashes = "0.7.3"

[dev-dependencies]
hex = "=0.3.2"